# micro-learning

./: .gitignore  CMakeLists.txt
app/: CMakeLists.txt  main.cpp
include/core/: Tape.h
include/math/: Constants.h  Statistics.h
include/math/random/: Normal.h
include/nn/losses/: MSE.h
include/nn/optimizers/: Optimizer.h  SGD.h
include/util/data/: CSV.h  Dataloader.h  Dataset.h
src/: CMakeLists.txt
src/core/: Tape.cpp
src/math/: Statistics.cpp
src/math/random/: Normal.cpp
src/nn/layers/: Linear.cpp
src/nn/losses/: MSE.cpp
src/util/data/: CSV.cpp  Dataloader.cpp  Dataset.cpp
